fixed single-product slider font size on mobile

--- a/wp-content/themes/travelify/custom.css
+++ b/wp-content/themes/travelify/custom.css
@@ -2023,7 +2023,7 @@ ul#menu-header-bottom .default-menu {
         display: none;
     }
 
-    .page-template-template-product-category-page .top_banner_product_category .header_top_summary h2{
+    .page-template-template-product-category-page .top_banner_product_category .header_top_summary h2, .single-product .top_banner_product_category .header_top_summary h2{
         font-size: 20px;
     }
 
